[package]
name = "arras-protocol"
version = "0.1.0"
authors = ["Aspect <ttmmiizz100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.20"

[dependencies.web-sys]
version = "0.3.20"
features = [
    "console"
]
